--- a/staging/certs/cluster-issuer.yaml
+++ b/staging/certs/cluster-issuer.yaml
@@ -16,3 +16,7 @@ spec:
           route53:
             region: us-east-1
             hostedZoneID: Z0370020127AFOKTMQ2VT
+            accessKeyID: AKIAXCG6FZCZM2TNDAMR
+            secretAccessKeySecretRef:
+              name: cert-manager-route53-aws-creds
+              key: aws_secret_access_key
