--- a/staging/config/bank-appset/values-banksystem-demoshop.yaml
+++ b/staging/config/bank-appset/values-banksystem-demoshop.yaml
@@ -1,12 +1,15 @@
-application: banksystem-web
+application: banksystem-demoshop
+
 clusterConfig:
   namespace: banksystem
-replicaCount: 1
+
+replicaCount: 2
+
 image:
-  registry: 111111222222.dkr.ecr.eu-west-1.amazonaws.com
-  repository: banksystem-web
+  registry: <ACCOUNT_ID>.dkr.ecr.us-east-1.amazonaws.com
+  repository: demoshop
   tag: ""
-  pullPolicy: Always
+  pullPolicy: IfNotPresent
 
 imagePullSecrets: []
 
@@ -17,8 +20,8 @@ serviceAccount:
   create: true
   automount: true
   annotations:
-    eks.amazonaws.com/role-arn: arn:aws:iam::<ACCOUNT_ID>:role/banksystem-web-rds-role
-  name: banksystem-web
+    eks.amazonaws.com/role-arn: arn:aws:iam::<ACCOUNT_ID>:role/demoshop-rds-role
+  name: demoshop-sa
 
 podAnnotations: {}
 podLabels: {}
@@ -37,6 +40,7 @@ securityContext: {}
 service:
   type: ClusterIP
   port: 80
+  name: http
 
 containerPort:
   name: http
@@ -61,12 +65,12 @@ httpRoute:
       namespace: gateway-system
       sectionName: http
   hostnames:
-    - banksystem-web.app.pilotgab.com
+    - demoshop.app.pilotgab.com
   rules:
     - matches:
         - path:
             type: PathPrefix
-            value: /headers
+            value: /
 
 resources:
   requests:
@@ -93,7 +97,7 @@ readinessProbe:
 autoscaling:
   enabled: false
   minReplicas: 1
-  maxReplicas: 100
+  maxReplicas: 5
   targetCPUUtilizationPercentage: 80
 
 volumes: []
@@ -111,11 +115,11 @@ env:
   - name: RdsAuthentication__RdsEndpoint
     value: "<RDS_ENDPOINT>"
   - name: RdsAuthentication__DbUser
-    value: "banksystem_app"
+    value: "demoshop_app"
   - name: RdsAuthentication__AwsRegion
     value: "us-east-1"
   - name: RdsAuthentication__FallbackPassword
     valueFrom:
       secretKeyRef:
-        name: banksystem-db-credentials
+        name: demoshop-db-credentials
         key: password
